# zipline

./: .appveyor.yml  .buildinfo  .bumpversion.cfg  .coverage  .coveragerc  .dir-locals.el  .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .replit  .travis.yml  404.html  AUTHORS  CHANGELOG.md  CNAME  CONTRIBUTING.rst  Dockerfile  Dockerfile-dev  LICENSE  MANIFEST.in  README.md  README.rst  REQUIREMENTS.txt  Vagrantfile  ant-designs?organization=oscarg933&organization=oscarg933  appendix.html  appveyor.yml  beginner-tutorial.html  bundles.html  config.py  contributing.html  contributors.html  convert_nbs_to_md.sh  coverage.xml  dataloader.py  dev_setup.py  development-environment.html  development-guidelines.html  (+53 more)
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: build_and_distribute.yml  build_wheels.yml  ci.yaml  ci_tests copy.yml  ci_tests_full.yml  ci_tests_quick.yml  conda_exchange_calendar.yml  conda_package.yml  conda_talib.yml  logbook_conda.yml  publish-to-pypi.yml  talib_conda.yml  unit_tests.yml  windows_ci.yml  zipline_conda.yml
.ipynb_checkpoints/: tutorial-checkpoint.ipynb  tutorial-pydata-boston-checkpoint.ipynb
.pyenv/: .Python
.pyenv/include/: python2.6
_modules/: abc.html  index.html
_modules/toolz/: functoolz.html
_modules/trading_calendars/: calendar_utils.html  trading_calendar.html
_modules/zipline/: __init__.html  algorithm.html  protocol.html  sources.html  test_algorithms.html  version.html
_sources/: appendix.txt  beginner-tutorial.txt  bundles.rst.txt  bundles.txt  contributing.txt  contributors.txt  development-environment.txt  development-guidelines.txt  index.rst.txt  index.txt  installation.txt  nb.txt  quickstart.txt  release-process.txt  releases.rst.txt  releases.txt  risk-and-perf-metrics.rst.txt  trading-calendars.txt  zipline.finance.txt  zipline.gens.txt  zipline.transforms.txt  zipline.txt  zipline.utils.txt
_static/: default.css  documentation_options.js  nature.css  searchtools.js  sidebar.js
asv_benchmarks/benchmarks/: backtest.py~
backtest/: util.py
binstar/cyordereddict/: .binstar.yml
binstar/logbook/: .binstar.yml
binstar/ta-lib/: .binstar.yml
binstar/zipline/: .binstar.yml
ci/: make_conda_packages.py
ci/actions/: install_miniconda.sh  (+1 more)
conda/: README.md
containers/: Dockerfile  docker.sh
cover/: index.html  qsim.html  qsim_data.html  qsim_data_equity.html  qsim_messaging.html  qsim_simulator.html  qsim_simulator_config.html  qsim_simulator_feed.html  qsim_transforms.html  qsim_transforms_base.html  qsim_transforms_technical.html  qsim_util.html
data/: feed.py  transforms.py
dev/: cli.py  topos.py
docs/: .gitignore  .mdmd  CNAME  Makefile  conf.py  contributing.rst  convert_nbs_to_md.sh  deploy.py  extensions.rst  index.rst  installation.rst  make.bat  manifesto.rst  md  messaging.rst  modules.rst  notes.rst  overview.rst  pipeline_example.py  qsim.data.rst  qsim.rst  qsim.simulator.rst  qsim.test.rst  qsim.transforms.rst  quickstart.rst  tutorial.ipynb  tutorial.ipynb.mdmd  tutorialmd  zipline.data.rst  zipline.finance.rst  zipline.gens.rst  zipline.rst  zipline.test.rst  zipline.transforms.rst  zipline.utils.rst
etc/: clear_c_extensions.sh  conda_build_matrix.py  constraints_newpandas.txt  constraints_oldpandas.txt  create_authors_file.sh  dev-install  docker_cmd.sh  gen_type_stubs.py  goodies.txt  install-newpandas.sh  install-oldpandas.sh  install-talib  jenkins.sh  ordered_pip.sh  pycco.css  rebuild-cython.sh  requirements.in  requirements.txt  requirements_blaze.in  requirements_blaze.txt  requirements_build.in  requirements_dev.in  requirements_dev.txt  requirements_docs.in  requirements_docs.txt  requirements_extra.txt  requirements_live_ib.txt  requirements_locked.txt  requirements_newpandas.in  requirements_oldpandas.in  requirements_py2.txt  requirements_py36_locked.txt  requirements_py37_locked.txt  requirements_py38_locked.txt  requirements_py39_locked.txt  requirements_sci.txt  requirements_talib.in  requirements_talib.txt  write_pipconf.py
notebooks/: Experimenting with Frames.ipynb
old_docs/: CNAME
qsim/: config.py  core.py  messaging.py  sources.py  util.py
release-notes/: zipline-0.7.1.md.orig
scripts/: dev_setup.py  generate_new_sample_saved_state.py  jenkins.sh  ordered_pip.sh  requirements_dev.txt  requirements_sci.txt  run_algo.py
simulator/: host_settings.py  qbt.py  qbt_client.py  qbt_server.py
test/: test_messaging.py  testmessaging.py
tests/: __init__.py  client.py  conftest.py  history_cases.py  serialization_cases.py  test_adjusted_array.py  test_algorithm.py  test_algorithm_gen.py  test_algorithm_result.py  test_api_shim.py  test_assets.py  test_bar_data.py  test_batchtransform.py  test_benchmark.py  test_blotter.py  test_chunked_adjustments.py  test_cli.py  test_clock.py  test_cmdline.py  test_commissions.py  test_components.py  test_continuous_futures.py  test_daily_history_aggregator.py  test_data_portal.py  test_data_util.py  test_dataportal.py  test_delayed_signals.py  test_doctests.py  test_engine.py  test_events_through_risk.py  test_examples.py  test_exception_handling.py  test_exchange_calendar.py  test_execution_styles.py  test_feed.py  test_fetcher.py  test_finance.py  test_history.py  test_history_new.py  test_labelarray.py  (+43 more)
tools/: install_talib.bat  install_talib.sh
tutorial/: index.html
vb_suite/: run_suite.py  suite.py  zipline_bench_functions.py  ziplines.py
zipline/: MESSAGES.py  __init__.py  __main__.py  _horrors.py  _protocol.cp36-win32.pyd  _protocol.pxd  _protocol.pyx  _version.py  algorithm.py  algorithm_live.py  api.py  api.pyi  component.py  core.py  country.py  currency.py  daemon.py  date_utils.py  db.py  dispatch.py  errors.py  exceptions.py  extensions.py  gpoll.py  international.py  lib.pyx  lines.py  logging.cfg  messaging.py  monitor.py  normalize_date.py  protocol.py  protocol_utils.py  result.py  result_helpers.py  serial.py  simulator.py  sources.py  test_algorithms.py  topology.py  (+5 more)
(+1138 files in other folders)
