[nosetests]
verbosity=2
detailed-errors=1
with-ignore-docstrings=1
with-timer=1
timer-top-n=15
cover-package=zipline
with-doctest=1
testmatch=(?:^|[\\b_\\.-])[Tt]est(?!ing)
logging-level=INFO

[metadata]
description-file = README.rst
license_file = LICENSE

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[versioneer]
VCS=git
style=pep440
versionfile_source=zipline/_version.py
versionfile_build=zipline/_version.py
tag_prefix=
parentdir_prefix= zipline-
