[metadata]
name = zipline-reloaded
url = https://zipline.ml4trading.io
license = Apache 2.0
license_file = LICENSE
description = A backtester for trading algorithms
long_description = file: README.md
long_description_content_type = text/markdown
author = Quantopian Inc
author_email = pm@ml4trading.io
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Office/Business :: Financial :: Investment
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: System :: Distributed Computing


[nosetests]
verbosity = 2
with-ignore-docstrings = 1
with-timer = 1
timer-top-n = 15
with-coverage = 1
cover-package = zipline
with-doctest = 1
testmatch = (?:^|[\\b_\\.-])[Tt]est(?!ing)
logging-level = INFO


# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[versioneer]
VCS = git
style = pep440
versionfile_source = zipline/_version.py
versionfile_build = zipline/_version.py
tag_prefix =
parentdir_prefix = zipline-

[flake8]
exclude = versioneer.py, setup.py, .git, __pycache__, docs, conda
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4,B9
ignore = E203, E266, E501, W503, F403, F401, E231

[options]
python_requires = >=3.7
include_package_data = True
install_requires =
    alembic>=0.7.7
    bcolz-zipline>=1.2.3
    bottleneck>=1.0.0
    click>=4.0.0
    empyrical-reloaded>=0.5.7
    h5py>=2.7.1
    intervaltree>=2.1.0
    iso3166>=0.9
    iso4217>=1.6.20180829
    logbook >=1.0
    lru-dict>=1.1.4
    multipledispatch>=0.6.0
    networkx>=2.0
    numexpr>=2.6.1
    numpy>=1.14.5
    pandas>=1.1.0
    patsy>=0.4.0
    python-dateutil>=2.4.2
    python-interface>=1.5.3
    pytz>=2018.5
    requests>=2.9.1
    scipy>=0.17.1
    six>=1.10.0
    sqlalchemy>=1.0.8A
    statsmodels>=0.6.1
    TA-Lib>=0.4.09
    tables>=3.4.3
    toolz>=0.8.2
    trading-calendars>=1.6.1

[options.extras_require]
test =
    tox
    coverage>=4.0.3
    nose>=1.3.7
    parameterized>=0.6.1
    nose-ignore-docstring>=0.2
    nose-timer>=0.5.0
    mock>=2.0.0p
    testfixtures>=4.1.2
    flake8>=3.3.0
    matplotlib>=1.5.3
    responses>=0.9.0
    pandas-datareader>=0.2.1
    pre-commit

docs =
    Cython
    Sphinx>=1.3.2
    numpydoc>=0.5.0
    sphinx-autobuild>=0.6.0
    pydata-sphinx-theme
    sphinx-markdown-tables
